Styles/styles.css
/* ... */
.stat-title {
    text-transform: uppercase;
    font-size: 1.4rem;
    text-align: center;
    padding: 3.5rem 0;
    position: relative;

    &::before {
        content: '';
        position: absolute;
        left: 50%;
        top: 0;
        width: 40%;
        height: 1px;
        background-color: var(--color-black-75);
        transform: translateX(-50%);
    }
}

.timeline {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 2rem;
    padding-bottom: 3rem;

    .timeline-item {
        position: relative;
        padding-left: 3rem;
        border-left: 1px solid var(--color-black-75);

        .timeline-icon {
            position: absolute;
            left: -1.6rem;
            top: 0;
            background-color: var(--color-primary);
            width: 50px;
            height: 50px;
            border-radius: 50%;
            display: flex;
            align-items: center;
            justify-content: center;

            i {
                font-size: 1.3rem;
                color: #FFFFFF;
            }
        }

        .timeline-duration {
            padding: .2rem .6rem;
            background-color: var(--color-black-75);
            border-radius: 15px;
            display: inline-block;
            font-size: .9rem;
            text-transform: uppercase;
            font-weight: 500;
        }

        h5 {
            padding: 1rem 0;
            text-transform: uppercase;
            font-size: 1.3rem;
            font-weight: 600;

            span {
                color: var(--color-black-05);
                font-weight: 500;
                font-size: 1.2rem;
            }
        }

        p {
            color: var(--color-black-10);
        }
    }
}

.certification-header {
    display: flex;
    align-items: center;
}

.certification-icon {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--color-primary);
    border-radius: 20%;
    width: 28px;
    height: 28px;
    margin-left: 1rem;
    cursor: pointer;
    transition: all .4s ease-in-out;
    font-size: 1rem;
    color: var(--color-white);

    &:hover {
        background-color: var(--color-black-75);
    }
}

.certification {
    position: relative;
    padding-bottom: 1rem;
    h5 {
        padding: 1rem 0;
        text-transform: uppercase;
        font-size: 1.3rem;
        font-weight: 600;

        span {
            color: var(--color-black-05);
            font-weight: 500;
            font-size: 1.2rem;
        }
    }
    p {
        margin-bottom: 2rem;
    }
    &::after {
        content: "";
        display: block;
        width: 50%;
        border-bottom: solid var(--color-primary) 1px;
        
    }
}

.portfolio-text {
    text-align: center;
}

.portfolios {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 2rem;
    margin-top: 3rem;

    .portfolio-item {
        position: relative;

        img {
            width: 100%;
            height: 300px;
            object-fit: cover;
            border-radius: 15px;
        }

        .hover-item {
            width: 100%;
            height: 100%;
            background-color: var(--color-primary);
            position: absolute;
            top: 0;
            left: 0;
            border-radius: 15px;
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;
            opacity: 0;
            transform: scale(0);
            transition: all .4s ease-in-out;

            h3 {
                font-size: 1.5rem;
                color: #FFFFFF;
                margin-bottom: 1.5rem;
            }

            .icons {
                display: flex;
                align-items: center;
                justify-content: center;

                .icon {
                    background-color: var(--color-black);
                    border-radius: 50%;
                    width: 50px;
                    height: 50px;
                    display: flex;
                    align-items: center;
                    justify-content: center;
                    margin: 0 1rem;
                    cursor: pointer;
                    transition: all .4s ease-in-out;

                    i {
                        font-size: 1.5rem;
                        color: var(--color-white);
                        margin: 0 1rem;
                    }

                    &:hover {
                        background-color: var(--color-white);

                        i {
                            color: var(--color-black);
                        }
                    }
                }
            }
        }
    }
}

.portfolio-item:hover .hover-item {
    opacity: 1;
    transform: scale(1);
}
/* ... */

